font/antlr4/gen/DongLangParser.cpp

// Generated from D:/studyCode/DongLang/font/antlr4/DongLang.g4 by ANTLR 4.13.1


#include "DongLangListener.h"
#include "DongLangVisitor.h"

#include "DongLangParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct DongLangParserStaticData final {
  DongLangParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  DongLangParserStaticData(const DongLangParserStaticData&) = delete;
  DongLangParserStaticData(DongLangParserStaticData&&) = delete;
  DongLangParserStaticData& operator=(const DongLangParserStaticData&) = delete;
  DongLangParserStaticData& operator=(DongLangParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag donglangParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
DongLangParserStaticData *donglangParserStaticData = nullptr;

void donglangParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (donglangParserStaticData != nullptr) {
    return;
  }
#else
  assert(donglangParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<DongLangParserStaticData>(
    std::vector<std::string>{
      "prog", "statement", "function_def", "externC", "function_body", "farg", 
      "f_varargs", "farg_list", "ret_expression", "expression", "cond_statement", 
      "if_expression", "elif_expr", "else_expr", "elif", "if_cond", "for_expression", 
      "for_cond", "global_var_expression", "var_expression", "paran_expr", 
      "call_expr", "expr_list", "num_primary", "str_primary", "bool_primary", 
      "value_primary", "array_index", "id_primary_p_addrs", "id_primary", 
      "primary", "primary_type", "array_type", "type_type", "type_type_void", 
      "var_value", "var_arr_value", "assign", "assigns", "var", "vars", 
      "var_declares"
    },
    std::vector<std::string>{
      "", "'('", "')'", "'extern'", "'C'", "'{'", "'}'", "','", "'...'", 
      "'['", "']'", "'int'", "'string'", "'float'", "'bool'", "'byte'", 
      "'='", "'func'", "'return'", "'void'", "'true'", "'false'", "'for'", 
      "'break'", "'continue'", "'if'", "'else'", "'elif'", "'&'", "'&&'", 
      "'||'", "'!'", "", "'++'", "'--'", "';'", "'+'", "'-'", "", "'/'", 
      "'|'", "'^'", "'~'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", 
      "", "", "", "", "", "", "", "", "'NULL'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "FUNC", "RETURN", "VOID", "TRUE", "FALSE", "FOR", "BREAK", "CONTINUE", 
      "IF", "ELSE", "ELIF", "POINTADDR", "COND_AND", "COND_OR", "COND_NOT", 
      "POINT", "INCREMENT", "DECREMENT", "COND_SPE", "ADD", "SUB", "MUL", 
      "DIV", "OR", "XOR", "NOT", "CMP_EQ", "CMP_NE", "CMP_GT", "CMP_LT", 
      "CMP_GE", "CMP_LE", "SPACE", "LINE_COMMENT", "COMMENT", "IDENTIFIER", 
      "NUMBER", "ALPHA_DIGIT", "ALPHA", "DIGIT", "NULL", "STRING_LITERAL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  donglangParserStaticData = staticData.release();
}

}

DongLangParser::DongLangParser(TokenStream *input) : DongLangParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

DongLangParser::DongLangParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  DongLangParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *donglangParserStaticData->atn, donglangParserStaticData->decisionToDFA, donglangParserStaticData->sharedContextCache, options);
}

DongLangParser::~DongLangParser() {
  delete _interpreter;
}

const atn::ATN& DongLangParser::getATN() const {
  return *donglangParserStaticData->atn;
}

std::string DongLangParser::getGrammarFileName() const {
  return "DongLang.g4";
}

const std::vector<std::string>& DongLangParser::getRuleNames() const {
  return donglangParserStaticData->ruleNames;
}

const dfa::Vocabulary& DongLangParser::getVocabulary() const {
  return donglangParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView DongLangParser::getSerializedATN() const {
  return donglangParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

DongLangParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DongLangParser::Global_var_expressionContext *> DongLangParser::ProgContext::global_var_expression() {
  return getRuleContexts<DongLangParser::Global_var_expressionContext>();
}

DongLangParser::Global_var_expressionContext* DongLangParser::ProgContext::global_var_expression(size_t i) {
  return getRuleContext<DongLangParser::Global_var_expressionContext>(i);
}

std::vector<tree::TerminalNode *> DongLangParser::ProgContext::COND_SPE() {
  return getTokens(DongLangParser::COND_SPE);
}

tree::TerminalNode* DongLangParser::ProgContext::COND_SPE(size_t i) {
  return getToken(DongLangParser::COND_SPE, i);
}

std::vector<DongLangParser::Function_defContext *> DongLangParser::ProgContext::function_def() {
  return getRuleContexts<DongLangParser::Function_defContext>();
}

DongLangParser::Function_defContext* DongLangParser::ProgContext::function_def(size_t i) {
  return getRuleContext<DongLangParser::Function_defContext>(i);
}


size_t DongLangParser::ProgContext::getRuleIndex() const {
  return DongLangParser::RuleProg;
}

void DongLangParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void DongLangParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


std::any DongLangParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::ProgContext* DongLangParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, DongLangParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 194568) != 0)) {
      setState(88);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case DongLangParser::T__10:
        case DongLangParser::T__11:
        case DongLangParser::T__12:
        case DongLangParser::T__13:
        case DongLangParser::T__14: {
          setState(84);
          global_var_expression();
          setState(85);
          match(DongLangParser::COND_SPE);
          break;
        }

        case DongLangParser::T__2:
        case DongLangParser::FUNC: {
          setState(87);
          function_def();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(92);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

DongLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DongLangParser::ExpressionContext* DongLangParser::StatementContext::expression() {
  return getRuleContext<DongLangParser::ExpressionContext>(0);
}

tree::TerminalNode* DongLangParser::StatementContext::COND_SPE() {
  return getToken(DongLangParser::COND_SPE, 0);
}

DongLangParser::Var_expressionContext* DongLangParser::StatementContext::var_expression() {
  return getRuleContext<DongLangParser::Var_expressionContext>(0);
}

DongLangParser::Ret_expressionContext* DongLangParser::StatementContext::ret_expression() {
  return getRuleContext<DongLangParser::Ret_expressionContext>(0);
}

DongLangParser::If_expressionContext* DongLangParser::StatementContext::if_expression() {
  return getRuleContext<DongLangParser::If_expressionContext>(0);
}

DongLangParser::For_expressionContext* DongLangParser::StatementContext::for_expression() {
  return getRuleContext<DongLangParser::For_expressionContext>(0);
}


size_t DongLangParser::StatementContext::getRuleIndex() const {
  return DongLangParser::RuleStatement;
}

void DongLangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void DongLangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any DongLangParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::StatementContext* DongLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, DongLangParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(104);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      expression(0);
      setState(94);
      match(DongLangParser::COND_SPE);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(96);
      var_expression();
      setState(97);
      match(DongLangParser::COND_SPE);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(99);
      ret_expression();
      setState(100);
      match(DongLangParser::COND_SPE);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(102);
      if_expression();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(103);
      for_expression();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_defContext ------------------------------------------------------------------

DongLangParser::Function_defContext::Function_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DongLangParser::Function_defContext::FUNC() {
  return getToken(DongLangParser::FUNC, 0);
}

DongLangParser::Type_type_voidContext* DongLangParser::Function_defContext::type_type_void() {
  return getRuleContext<DongLangParser::Type_type_voidContext>(0);
}

tree::TerminalNode* DongLangParser::Function_defContext::IDENTIFIER() {
  return getToken(DongLangParser::IDENTIFIER, 0);
}

DongLangParser::Farg_listContext* DongLangParser::Function_defContext::farg_list() {
  return getRuleContext<DongLangParser::Farg_listContext>(0);
}

DongLangParser::Function_bodyContext* DongLangParser::Function_defContext::function_body() {
  return getRuleContext<DongLangParser::Function_bodyContext>(0);
}

tree::TerminalNode* DongLangParser::Function_defContext::COND_SPE() {
  return getToken(DongLangParser::COND_SPE, 0);
}

DongLangParser::ExternCContext* DongLangParser::Function_defContext::externC() {
  return getRuleContext<DongLangParser::ExternCContext>(0);
}


size_t DongLangParser::Function_defContext::getRuleIndex() const {
  return DongLangParser::RuleFunction_def;
}

void DongLangParser::Function_defContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_def(this);
}

void DongLangParser::Function_defContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_def(this);
}


std::any DongLangParser::Function_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitFunction_def(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::Function_defContext* DongLangParser::function_def() {
  Function_defContext *_localctx = _tracker.createInstance<Function_defContext>(_ctx, getState());
  enterRule(_localctx, 4, DongLangParser::RuleFunction_def);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == DongLangParser::T__2) {
      setState(106);
      externC();
    }
    setState(109);
    match(DongLangParser::FUNC);
    setState(110);
    type_type_void();
    setState(111);
    match(DongLangParser::IDENTIFIER);
    setState(112);
    match(DongLangParser::T__0);
    setState(113);
    farg_list();
    setState(114);
    match(DongLangParser::T__1);
    setState(117);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DongLangParser::T__4: {
        setState(115);
        function_body();
        break;
      }

      case DongLangParser::COND_SPE: {
        setState(116);
        match(DongLangParser::COND_SPE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExternCContext ------------------------------------------------------------------

DongLangParser::ExternCContext::ExternCContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t DongLangParser::ExternCContext::getRuleIndex() const {
  return DongLangParser::RuleExternC;
}

void DongLangParser::ExternCContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExternC(this);
}

void DongLangParser::ExternCContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExternC(this);
}


std::any DongLangParser::ExternCContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitExternC(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::ExternCContext* DongLangParser::externC() {
  ExternCContext *_localctx = _tracker.createInstance<ExternCContext>(_ctx, getState());
  enterRule(_localctx, 6, DongLangParser::RuleExternC);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(119);
    match(DongLangParser::T__2);
    setState(120);
    match(DongLangParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Function_bodyContext ------------------------------------------------------------------

DongLangParser::Function_bodyContext::Function_bodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DongLangParser::StatementContext *> DongLangParser::Function_bodyContext::statement() {
  return getRuleContexts<DongLangParser::StatementContext>();
}

DongLangParser::StatementContext* DongLangParser::Function_bodyContext::statement(size_t i) {
  return getRuleContext<DongLangParser::StatementContext>(i);
}


size_t DongLangParser::Function_bodyContext::getRuleIndex() const {
  return DongLangParser::RuleFunction_body;
}

void DongLangParser::Function_bodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction_body(this);
}

void DongLangParser::Function_bodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction_body(this);
}


std::any DongLangParser::Function_bodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitFunction_body(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::Function_bodyContext* DongLangParser::function_body() {
  Function_bodyContext *_localctx = _tracker.createInstance<Function_bodyContext>(_ctx, getState());
  enterRule(_localctx, 8, DongLangParser::RuleFunction_body);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(DongLangParser::T__4);
    setState(126);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 301745717271394306) != 0)) {
      setState(123);
      statement();
      setState(128);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(129);
    match(DongLangParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FargContext ------------------------------------------------------------------

DongLangParser::FargContext::FargContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

DongLangParser::Type_typeContext* DongLangParser::FargContext::type_type() {
  return getRuleContext<DongLangParser::Type_typeContext>(0);
}

tree::TerminalNode* DongLangParser::FargContext::IDENTIFIER() {
  return getToken(DongLangParser::IDENTIFIER, 0);
}


size_t DongLangParser::FargContext::getRuleIndex() const {
  return DongLangParser::RuleFarg;
}

void DongLangParser::FargContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFarg(this);
}

void DongLangParser::FargContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFarg(this);
}


std::any DongLangParser::FargContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitFarg(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::FargContext* DongLangParser::farg() {
  FargContext *_localctx = _tracker.createInstance<FargContext>(_ctx, getState());
  enterRule(_localctx, 10, DongLangParser::RuleFarg);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    type_type();
    setState(132);
    match(DongLangParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- F_varargsContext ------------------------------------------------------------------

DongLangParser::F_varargsContext::F_varargsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t DongLangParser::F_varargsContext::getRuleIndex() const {
  return DongLangParser::RuleF_varargs;
}

void DongLangParser::F_varargsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterF_varargs(this);
}

void DongLangParser::F_varargsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitF_varargs(this);
}


std::any DongLangParser::F_varargsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitF_varargs(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::F_varargsContext* DongLangParser::f_varargs() {
  F_varargsContext *_localctx = _tracker.createInstance<F_varargsContext>(_ctx, getState());
  enterRule(_localctx, 12, DongLangParser::RuleF_varargs);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(134);
    match(DongLangParser::T__6);
    setState(135);
    match(DongLangParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Farg_listContext ------------------------------------------------------------------

DongLangParser::Farg_listContext::Farg_listContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<DongLangParser::FargContext *> DongLangParser::Farg_listContext::farg() {
  return getRuleContexts<DongLangParser::FargContext>();
}

DongLangParser::FargContext* DongLangParser::Farg_listContext::farg(size_t i) {
  return getRuleContext<DongLangParser::FargContext>(i);
}

DongLangParser::F_varargsContext* DongLangParser::Farg_listContext::f_varargs() {
  return getRuleContext<DongLangParser::F_varargsContext>(0);
}


size_t DongLangParser::Farg_listContext::getRuleIndex() const {
  return DongLangParser::RuleFarg_list;
}

void DongLangParser::Farg_listContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFarg_list(this);
}

void DongLangParser::Farg_listContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFarg_list(this);
}


std::any DongLangParser::Farg_listContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<DongLangVisitor*>(visitor))
    return parserVisitor->visitFarg_list(this);
  else
    return visitor->visitChildren(this);
}

DongLangParser::Farg_listContext* DongLangParser::farg_list() {
  Farg_listContext *_localctx = _tracker.createInstance<Farg_listContext>(_ctx, getState());
  enterRule(_localctx, 14, DongLangParser::RuleFarg_list);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(149);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case DongLangParser::T__1: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case DongLangParser::T__10:
      case DongLangParser::T__11:
      case DongLangParser::T__12:
      case DongLangParser::T__13:
      case DongLangParser::T__14: {
        enterOuterAlt(_localctx, 2);
        setState(138);
        farg();
        setState(143);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(139);
            match(DongLangParser::T__6);
            setState(140);
            farg(); 
          }
          setState(145);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
        }
        setState(147);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == DongLangParser::T__6) {
          setState(146);
          f_varargs();
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Ret_expressionContext ------------------------------------------------------------------

DongLangParser::Ret_expressionContext::Ret_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* DongLangParser::Ret_expressionContext::RETURN() {
  return getToken(DongLangParser::RETURN, 0);
}

DongLangParser::ExpressionContext* DongLangParser::Ret_expressionContext::expression() {
  return getRuleContext<DongLangParser::ExpressionContext>(0);
}


size_t DongLangParser::Ret_expressionContext::getRuleIndex() const {
  return DongLangParser::RuleRet_expression;
}

void DongLangParser::Ret_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<DongLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRet_expression(this);
}
